fix: fix gap in slider

--- a/ecom/src/App/pages/ProductPage/ProductPage.module.scss
+++ b/ecom/src/App/pages/ProductPage/ProductPage.module.scss
@@ -10,7 +10,7 @@
 
 .product_container {
   display: flex;
-  gap: var(--space-xl);
+  gap: 50px;
 }
 
 .product_image {
